# dc-torrent-view

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp  plugin.cpp  torrentfilesmodel.cpp  torrentfilesmodel.hpp  torrentinfoview.cpp  torrentinfoview.hpp  torrentinfoview.ui  torrenttrackersmodel.cpp  torrenttrackersmodel.hpp  utils.cpp  utils.hpp
sdk/: .gitignore  readme.txt
